[tool.poetry]
name = "jack-server"
version = "0"
description = "Control JACK server with Python"
authors = ["Lev Vereshchagin <mail@vrslev.com>"]
license = "MIT"
readme = "README.md"
include = ["src/jack_server/py.typed"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "24.1.1"
pre-commit = "3.5.0"
pytest = "8.0.0"
pytest-cov = "4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-version-plugin]
source = "git-tag"

[tool.pyright]
ignore = [".venv"]
pythonVersion = "3.8"
typeCheckingMode = "strict"
reportUnnecessaryTypeIgnoreComment = "warning"
reportPrivateUsage = false

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "-s"

[tool.coverage.report]
skip_covered = true
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "if sys.platform",
]
